--- a/index.html
+++ b/index.html
@@ -668,5 +668,8 @@
   </script>
 </body>
 </html>
-<script data-goatcounter="https://ahmad.goatcounter.com/count"
-        async src="//gc.zgo.at/count.js"></script>
+<head>
+  ...
+  <script data-goatcounter="https://ahmad.goatcounter.com/count"
+          async src="//gc.zgo.at/count.js"></script>
+</head>
