--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta name="description" content="Play my epic game, win rewards, and follow me on Instagram and GitHub!">
+<meta name="keywords" content="game, free online game, rewards, play to win, Ahmad game">
+<meta name="author" content="Ahmad Bagdady">
+  <title>Ahmad’s Epic Game – Play and Win!</title>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Ahmad Bagdaddy's Linux & VM Lab with an epic survival game" />
